@@ -5,7 +5,7 @@
     <parent>
         <groupId>group.gnometrading</groupId>
         <artifactId>gnome-parent</artifactId>
-        <version>1.0.1</version>
+        <version>1.4.2</version>
     </parent>
 
     <artifactId>gnome-backtest</artifactId>
@@ -55,17 +55,12 @@
         <dependency>
             <groupId>group.gnometrading</groupId>
             <artifactId>gnome-schemas</artifactId>
-            <version>1.0.23</version>
+            <version>1.1.1</version>
         </dependency>
         <dependency>
             <groupId>group.gnometrading</groupId>
             <artifactId>gnome-oms</artifactId>
-            <version>1.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>group.gnometrading</groupId>
-            <artifactId>gnome-strategies-core</artifactId>
-            <version>1.1.15-SNAPSHOT</version>
+            <version>1.1.1</version>
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
@@ -90,19 +85,6 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>
-                        --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
-                        --add-opens java.base/sun.nio.ch=ALL-UNNAMED
-                        --add-opens java.base/java.nio=ALL-UNNAMED
-                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
-                        --add-opens java.base/java.util.concurrent=ALL-UNNAMED
-                    </argLine>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
